# EternityEngine

./: .gitignore  .gitmodules  .ideas  .notes  CMakeLists.txt  README.md  main.cpp  makefile
.github/workflows/: compile-dev.yml  compile-master.yml
backups/: helloTriangle.cpp  images.cpp  models.cpp
backups/data/: constants.hpp
backups/vulkan/: cleanup.cpp  descriptors.cpp  device.hpp  images.cpp  init.cpp  mipmaps.cpp  misc.cpp  pipeline.hpp  sampler.cpp  swapchain.cpp  vulkan.hpp
shaders/: base_shader.frag  base_shader.vert  compile_shaders.sh  point_light.frag  point_light.vert  simple_shader.frag  simple_shader.vert
src/: app.cpp  app.hpp  engine.cpp  eve.cpp  main.cpp
src/engine/: engine.cpp  engine.hpp  eve_buffer.cpp  eve_buffer.hpp  eve_camera.cpp  eve_camera.hpp  eve_descriptors.hpp  eve_device.cpp  eve_device.hpp  eve_frame_info.hpp  eve_game_object.cpp  eve_game_object.hpp  eve_keyboard.cpp  eve_keyboard.hpp  eve_model.cpp  eve_model.hpp  eve_pipeline.cpp  eve_pipeline.hpp  eve_renderer.cpp  eve_renderer.hpp  eve_swap_chain.cpp  eve_swap_chain.hpp  eve_window.cpp  eve_window.hpp  images.cpp  models.cpp  simple_render_system.cpp  simple_render_system.hpp
src/engine/data/: constants.hpp  eve_frame_info.hpp  includes.hpp  structures.hpp
src/engine/device/: eve_device.cpp  eve_device.hpp  eve_keyboard.cpp  eve_keyboard.hpp
src/engine/game/: eve_camera.cpp  eve_camera.hpp  eve_chunk.cpp  eve_chunk.hpp  eve_debug.cpp  eve_debug.hpp  eve_game_object.cpp  eve_game_object.hpp  eve_model.cpp  eve_model.hpp  eve_physx.cpp  eve_physx.cpp.old  eve_physx.hpp  eve_physx.hpp.old  eve_registerer.cpp  eve_registerer.hpp  eve_terrain.cpp  eve_terrain.hpp  eve_world.cpp  eve_world.hpp  hellojolt.cpp
src/engine/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h  imgui_tables.cpp  imgui_vulkan_glfw_example.cpp.disabled  imgui_widgets.cpp
src/engine/implot/: implot.cpp  implot_demo.cpp  implot_items.cpp
src/engine/rendering/: eve_descriptors.cpp  eve_descriptors.hpp  eve_pipeline.cpp  eve_pipeline.hpp  eve_renderer.cpp  eve_renderer.hpp  eve_swap_chain.cpp  eve_swap_chain.hpp
src/engine/systems/: base_render_system.cpp  base_render_system.hpp  imgui_system.cpp  imgui_system.hpp  point_light_system.cpp  point_light_system.hpp  simple_render_system.cpp  simple_render_system.hpp
src/engine/utils/: eve_buffer.hpp  eve_enums.hpp  eve_threads.hpp  eve_utils.hpp
src/engine/vulkan/: buffers.cpp  debug.cpp  device.cpp  drawframe.cpp  init.cpp  instance.cpp  misc.cpp  pipeline.cpp  queuefamilies.cpp  transitions.cpp
src/libs/imgui/: imgui_impl_vulkan.h
